--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "license": "MIT",
   "packageManager": "yarn@4.0.2",
   "dependencies": {
+    "inquirer": "^9.2.12",
     "jest": "^29.7.0"
   },
   "scripts": {
+    "start": "yarn node src/index.js",
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   }
 }
