--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "packageManager": "yarn@4.0.2",
   "dependencies": {
+    "@clack/prompts": "^0.7.0",
     "inquirer": "^9.2.12",
     "jest": "^29.7.0"
   },
