--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "portchain-port-vessel-analysis",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "type": "module",
   "repository": "git@github.com:madsgodvinjensen/portchain-port-vessel-analysis.git",
   "author": "Mads Godvin Jensen <mads@strangedelight.dk>",
